[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/utils/DraggableControl.gd" type="Script" id=1]

[node name="DraggableControl" type="Control"]
anchor_bottom = 1.0
margin_right = 65.0
margin_bottom = -138.0
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_DraggableControl_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DraggableControl_mouse_exited"]
